[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ladder-dragon"
dynamic = ["version"]
description = "Fail-closed Binance Spot grid trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv==1.1.1",
  "requests==2.34.2",
]

[project.optional-dependencies]
dashboard = [
  "fastapi==0.116.1",
  "psutil==7.0.0",
  "uvicorn==0.35.0",
]
test = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ladder_dragon*", "bin*"]

[tool.setuptools.package-data]
ladder_dragon = ["migrations/*.sql"]

[tool.setuptools.dynamic]
version = {attr = "product_version.__version__"}
