[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ladder-dragon"
dynamic = ["version"]
description = "Fail-closed Binance Spot grid trading bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv==1.2.2",
  "requests==2.33.0",
]

[project.optional-dependencies]
dashboard = [
  "fastapi==0.136.3",
  "psutil==7.0.0",
  "uvicorn==0.51.0",
]
test = [
  "httpx==0.28.1",
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ladder_dragon*", "bin*"]

[tool.setuptools.package-data]
ladder_dragon = ["migrations/*.sql"]

[tool.setuptools.dynamic]
version = {attr = "product_version.__version__"}
